2004-08-22  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/horizontal-bracket.cc (print): use
	Tuplet_bracket::make_bracket, so it supports bracket-flare,
	edge-eight and shorten-pair.

2004-08-22  Pedro Kroger  <kroeger@pedrokroeger.net>

	* scm/framework-ps.scm (output-framework): set the first
	postscript page number to initialpagenumber

	* scm/page-layout.scm (ly:optimal-page-breaks): print the first
	page number according to initialpagenumber

	* scm/paper.scm (set-paper-dimensions): added initialpagenumber
	parameter

2004-08-22  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/slur-engraver.cc (class Slur_engraver): simplify: remove
	nested slurs. 

	* scripts/convert-ly.py (lilypond_version_re_str): handle
	\version "bar" % "foo"

	* lily/completion-note-heads-engraver.cc (process_music): set
	duration-log before announcing object.
	
	* lily/staff-symbol.cc (print): subtract thickness from staff line
	length

	* lily/parser.yy (book_body): disallow { ..music.. } inside \book
	
2004-08-21  Carl Sorensen  <carldsorensen@comcast.net>

	* scm/stencil.scm: remove fontify-text and fontify-text-white

2004-08-21  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/part-combiner.scm: skip name string. Fixes segfault problem.

	* Documentation/user/sound-output.texi (Sound): new file. Move all
	MIDI related information.

2004-08-20  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/script-engraver.cc (acknowledge_grob): only take into
	account note heads with a music cause. Fixes ambitus-accent.ly

	* scm/define-markup-commands.scm (finger): set encoding to
	fetaNumber.

2004-08-20  Erik Sandberg <ersa9195@student.uu.se>

	* scripts/convert-ly.py: typo

2004-08-19  Carl Sorensen  <carldsorensen@comcast.net>

	* scm/fret-diagrams.scm: Eliminate use of fontify-text; make 
	font calls for diagrams based on paper and props

2004-08-19  Graham Percival <gperlist@shaw.ca>

	* scripts/convert-ly.py: add \newpage -> \pageBreak rule.

2004-08-19  Erik Sandberg <ersa9195@student.uu.se>